--- a/src/main/resources/static/css/classContent.css
+++ b/src/main/resources/static/css/classContent.css
@@ -274,6 +274,16 @@ button {
 	background-color: rgba(240,240,240);
 	border: 1px solid #BBBBBB;
 }
+ .mystudyMissionPe{
+ 	width: 65%;
+ 	height: 40px;
+ 	color: #3F51B5;
+ }
+.cc{
+width:40px;
+height:20px;
+border: solid #BBBBBB 1px;
+}
 /*具体内容框框*/
 #content{
 	width: 800px;
