--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1035,6 +1035,12 @@ margin-left:30px;
 	top:350px;
 	left:800px;
 }
+.testButton6{
+    width: 100px;
+	height: 30px;
+    position:relative;
+	left:800px;
+}
 #backButton{
     width: 100px;
 	height: 30px;
@@ -1072,6 +1078,16 @@ margin-left:30px;
 .taskPanel{
 	width: 60%;
 	height: 400px;
+	margin-top: 100px;
+	margin-left: 200px;
+	overflow-x:hidden;
+	border: #BBBBBB solid 1px;
+	position: relative;
+	background: #F0F0F0;
+}
+.taskPanel6{
+	width: 60%;
+	height: 800px;
 	margin-top: 100px;
 	margin-left: 200px;
 	overflow-x:hidden;
@@ -1212,6 +1228,35 @@ margin-left:30px;
 	left: 35px;
 	margin-right:10px;
 }
+.test6{
+	width: 80%;
+	height: 320px;
+	background: #FFFFFF;
+	margin: 0 auto;
+	border: #BBBBBB solid 1px;
+	position: relative;
+	top: 50px;
+	line-height: 50px;
+}
+.cir{
+width:100%;
+height:30px;
+margin-left:30px;
+}
+.A6{
+    width:300px;
+	top: 0px;
+	left: 55px;
+	margin-left:30px;
+	border: #BBBBBB solid 1px;
+}
+.yu{
+width:100px;
+position:relative;
+margin-top:10px;
+margin-left:20px;
+height:30px;
+}
 .as{
 height=50px;
 }
@@ -1234,6 +1279,13 @@ height=50px;
 	background: #FFFFFF;
 }
 .testTitle{
+	width: 90%;
+	height: 40px;
+	border: #BBBBBB solid 1px;
+	position: relative;
+	left: 20px;
+}
+.testTitle6{
 	width: 90%;
 	height: 40px;
 	position: relative;
