--- a/src/main/resources/static/teacher/css/classContent.css
+++ b/src/main/resources/static/teacher/css/classContent.css
@@ -268,12 +268,14 @@ ul a {
 
 /*课程详情面板*/
 .secondBox{
-	width: 800px;
-	height: 400px;
-	margin: 0 auto;
-	background-color: rgba(240,240,240);
-	border: 1px solid #BBBBBB;
-}
+ 	width: 800px;
+ 	height: 400px;
+ 	margin: 0 auto;
+ 	margin-top:50px;
+ 	overflow-x:hidden;
+ 	background-color: rgba(240,240,240);
+ 	border: 1px solid #BBBBBB;
+ }
 /*具体内容框框*/
 #content{
 	width: 700px;
@@ -482,6 +484,7 @@ ul a {
 	float: right;
 	
 }
+
 #up{
 	position: relative;
 	left: -20px;
@@ -504,6 +507,12 @@ ul a {
 	left: 30px;
 }
 .upclassP{
+	position: relative;
+	left: 50px;
+	top: 50px;
+	margin-bottom:30px;
+}
+.upclassP2{
 	position: relative;
 	left: 50px;
 	top: 50px;
@@ -530,9 +539,10 @@ ul a {
 	top: -5px;
 	margin-right: 30px;
 }
-#chooseFolder{
+.chooseFolder{
 	position: relative;
-	top: 120px;
+	left:30px;
+	top:30px;
 }
 .classname{
 	position: relative;
@@ -540,6 +550,23 @@ ul a {
 	top: 30px;
 	width: 200px !important;
 	height: 30px !important;
+	border: #BBBBBB solid 1px;
+}
+.classname1{
+	position: relative;
+	left: 190px;
+    top:-10px;
+	width: 200px !important;
+	height: 30px !important;
+	border: #BBBBBB solid 1px;
+}
+.classname2{
+	position: relative;
+	left: 190px;
+    top:20px;
+	width: 200px !important;
+	height: 30px !important;
+	border: #BBBBBB solid 1px;
 }
 #uptraing{
 	width: 90%;
