--- a/src/main/resources/templates/student/index.html
+++ b/src/main/resources/templates/student/index.html
@@ -48,6 +48,8 @@ function goSchool(id)
    window.location.href="/student/teacherClass";
    if(getCookie("identification")==2)
    window.location.href="/student/myStudy";
+   if(getCookie("identification")==3)
+   window.location.href="/student/zSchoolIndex";
    }
    }
       function joinMessage()
