--- a/src/main/resources/templates/student/message.html
+++ b/src/main/resources/templates/student/message.html
@@ -38,7 +38,10 @@
    if(getCookie("identification")==1)
    window.location.href="/student/teacherClass";
    if(getCookie("identification")==2)
-   window.location.href="/student/myStudy";}
+   window.location.href="/student/myStudy";
+   if(getCookie("identification")==3)
+   window.location.href="/student/zSchoolIndex";
+   }
    }
       function joinMessage()
    {
