--- a/src/main/resources/templates/student/teacherClass.html
+++ b/src/main/resources/templates/student/teacherClass.html
@@ -41,10 +41,12 @@ var userID=getCookie("userID");
    if(userID==null){alert("请先登录!");}
    else
    {
-    if(getCookie("identification")==1)
+       if(getCookie("identification")==1)
    window.location.href="/student/teacherClass";
    if(getCookie("identification")==2)
-   window.location.href="/student/myStudy";}
+   window.location.href="/student/myStudy";
+   if(getCookie("identification")==3)
+   window.location.href="/student/zSchoolIndex";}
    }
       function joinMessage()
    {
