--- a/src/main/resources/static/manager/css/schoolIndex.css
+++ b/src/main/resources/static/manager/css/schoolIndex.css
@@ -500,9 +500,9 @@ ul,li {margin:0;padding:0;list-style:none;}
 #startnewsBtn{
 	position: relative;
 	left: 400px;
-	top: 80px;
-	height: 50px !important;
-	width: 150px !important;
+	top: 40px;
+	height: 50px important;
+	width: 150px important;
 	font-size: large;
 }
 #startPicBtn{
@@ -688,4 +688,27 @@ button {
 	top: 0px;
 	left: 50px;
 	background: white;
+}
+#sex{
+width:100px;
+margin-left:50px;
+}
+.sex1{
+position:relative;
+width:100px;
+margin-top:-100px;
+margin-left:50px;
+}
+.mystudyMissionPe1{
+color:red;
+height:40px;
+margin-left:50px;
+}
+#se{
+margin-top:30px;
+margin-left:30px;
+}
+.ins{
+width:100px;
+height:30px;
 }
