--- a/src/main/resources/templates/student/zNews.html
+++ b/src/main/resources/templates/student/zNews.html
@@ -159,7 +159,7 @@ $.ajax({
 			<div class="titBox"><h3><a href="javascript:showMenu(3);">实训动态</a></h3></div>
 			<div class="txtBox">
 				<ul>
-					<li><a href="putTraining.html">发布实训</a></li>
+					<li><a href="/student/zPutTraining">发布实训</a></li>
 					<li><a href="trainingData.html">实训数据汇总</a></li>
 				</ul>
 			</div>
