--- a/src/main/resources/templates/student/zData.html
+++ b/src/main/resources/templates/student/zData.html
@@ -316,7 +316,7 @@ var schoolID=getCookie("schoolID");
 			<div class="txtBox">
 				<ul>
 					<li><a href="/student/zPutTraining">发布实训</a></li>
-					<li><a href="trainingData.html">实训数据汇总</a></li>
+					<li><a href="/student/zTrainingData">实训数据汇总</a></li>
 				</ul>
 			</div>
 		</div><!--MenuBox-->
