--- a/src/main/resources/static/manager/css/schoolIndex.css
+++ b/src/main/resources/static/manager/css/schoolIndex.css
@@ -709,6 +709,38 @@ margin-top:30px;
 margin-left:30px;
 }
 .ins{
-width:100px;
+width:120px;
 height:30px;
+}
+.ins2{
+width:300px;
+height:30px;
+}
+.ins1{
+margin-left:30px;
+margin-top:30px;
+}
+.mystudyMissionP{
+ 	width: 90%;
+ 	height: 150px;
+ 	margin: 30px auto;
+ }
+ .mystudyMissionPa{
+ 	width: 80%;
+ 	height: 150px;
+ 	margin: 30px auto;
+ 	overflow-x:hidden;
+ 	border: solid #000000 1px;
+ }
+ .mystudyMissionPe{
+ 	width: 65%;
+ 	height: 40px;
+ 	color: #3F51B5;
+}
+.textq{
+margin-left:30px;
+margin-bottom:30px;
+color:green;
+font-family:"Times New Roman",Georgia,Serif;
+font-weight:bold;
 }
