--- a/src/main/resources/templates/student/zSchoolIndex.html
+++ b/src/main/resources/templates/student/zSchoolIndex.html
@@ -119,7 +119,7 @@ $.ajax({
 			<div class="txtBox">
 				<ul>
 					<li><a href="/student/zPutTraining">发布实训</a></li>
-					<li><a href="trainingData.html">实训数据汇总</a></li>
+					<li><a href="/student/zTrainingData">实训数据汇总</a></li>
 				</ul>
 			</div>
 		</div><!--MenuBox-->
