--- a/src/main/resources/templates/student/circleToComment.html
+++ b/src/main/resources/templates/student/circleToComment.html
@@ -16,9 +16,9 @@
 		{str2="我的学校";}
 		else
 		{str2="我的学习";}
-		str=str+"<img class=\"img-logo\" src=\"/img/logo.png\" /> <a href=\"/student/index\"><img class=\"head\" src=\"/img/字体设计.png\" /></a><a  onclick=\"joinStudy()\" class=\"nav1\">"+str2+"</a><a onclick=\"joinMessage()\" class=\"nav2\">消息</a>";
-		 if(getCookie("userID")==null)  str=str+"<a href=\"/student/login\" class=\"nav3\">登录/注册</a><img id=\"icon\" src=\"/img/头像.png\" />";
-        else        str=str+"<a class=\"nav3\">"+getCookie("name")+"</a><img id=\"icon\" src=\"/img/头像1.png\" /><a onclick=\"exituser()\" class=\"nav3\">退出登录</a>";
+		str=str+"<img class=\"img-logo\" src=\"/img/logo.png\" /> <a href=\"/student/index\"><img class=\"head\" src=\"/img/name.png\" /></a><a  onclick=\"joinStudy()\" class=\"nav1\">"+str2+"</a><a onclick=\"joinMessage()\" class=\"nav2\">消息</a>";
+		 if(getCookie("userID")==null)  str=str+"<a href=\"/student/login\" class=\"nav3\">登录/注册</a><img id=\"icon\" src=\"/img/head.png\" />";
+        else        str=str+"<a class=\"nav3\">"+getCookie("name")+"</a><img id=\"icon\" src=\"/img/head1.png\" /><a onclick=\"exituser()\" class=\"nav3\">退出登录</a>";
         $("#header").html(str);
     }
     function exituser()
@@ -114,7 +114,7 @@ $.ajax({
 			<p class="pColor1" id="name"></p>
 			<p class="pColor1" id="con"></p>
 		    <div class="mycommentBox">
-		    	<img src="/img/头像1.png" class="commentImg" />
+		    	<img src="/img/head1.png" class="commentImg" />
 		    	<button type="button" id="put" onclick="putComment()">发表</button>
 				<button type="button" id="gog" onclick="goBack()">返回</button>
 		    	<p class="userName">你想说些什么呢</p>
@@ -127,7 +127,7 @@ $.ajax({
 		<!--页脚-->
 	    <div class="footer">
 	    	<img class="img-logo" src="/img/logo.png" />
-			<img class="head" src="/img/字体设计.png" />
+			<img class="head" src="/img/name.png" />
 			<div class="introduction">
 				<p>文思海辉技术有限公司旗下实用技能学习平台。与专业机构、院校合作。为您提供海量优质课堂，以及创新的在线学习体验，帮助您获得全新的个人发展和能力提升。</p>
 			</div>
