--- a/src/main/resources/templates/student/teacherNewPeriod.html
+++ b/src/main/resources/templates/student/teacherNewPeriod.html
@@ -15,9 +15,9 @@
 		{str2="我的学校";}
 		else
 		{str2="我的学习";}
-		str=str+"<img class=\"img-logo\" src=\"/img/logo.png\" /><a href=\"/student/index\"><img class=\"head\" src=\"/img/字体设计.png\" /></a><a  onclick=\"joinStudy()\" class=\"nav1\">"+str2+"</a><a onclick=\"joinMessage()\" class=\"nav2\">消息</a>";
-		 if(getCookie("userID")==null)  str=str+"<a href=\"/student/login\" class=\"nav3\">登录/注册</a><img id=\"icon\" src=\"/img/头像.png\" />";
-        else        str=str+"<a class=\"nav3\">"+getCookie("name")+"</a><img id=\"icon\" src=\"/img/头像1.png\" /><a onclick=\"exituser()\" class=\"nav3\">退出登录</a>";
+		str=str+"<img class=\"img-logo\" src=\"/img/logo.png\" /><a href=\"/student/index\"><img class=\"head\" src=\"/img/name.png\" /></a><a  onclick=\"joinStudy()\" class=\"nav1\">"+str2+"</a><a onclick=\"joinMessage()\" class=\"nav2\">消息</a>";
+		 if(getCookie("userID")==null)  str=str+"<a href=\"/student/login\" class=\"nav3\">登录/注册</a><img id=\"icon\" src=\"/img/head.png\" />";
+        else        str=str+"<a class=\"nav3\">"+getCookie("name")+"</a><img id=\"icon\" src=\"/img/head1.png\" /><a onclick=\"exituser()\" class=\"nav3\">退出登录</a>";
         $("#header").html(str);
     }
     function exituser()
@@ -76,6 +76,7 @@ $.ajax({
          alert("新建课时成功！");
          window.location.href="/student/teacherClassContent";
 	}
+	}
 </script>
 <html>
 	<head>
@@ -96,7 +97,7 @@ $.ajax({
              	<p class="upclassP1">请输入课时名称：</p>
              	<input type="text" class="classname" id="name"/>
              	<p class="upclassP">请上传课时课件:</p>
-             	<input type="file" class="classname1" id="ppt">
+				 <input type="file" class="classname1" id="ppt">
 				 <p class="upclassP">请上传课时视频:</p>
 				 <input type="file" class="classname1" id="video">
              </div>
@@ -105,7 +106,7 @@ $.ajax({
 	    <!--页脚-->
 	    <div class="footer">
 	    	<img class="img-logo" src="/img/logo.png" />
-			<img class="head" src="/img/字体设计.png" />
+			<img class="head" src="/img/name.png" />
 			<div class="introduction">
 				<p>文思海辉技术有限公司旗下实用技能学习平台。与专业机构、院校合作。为您提供海量优质课堂，以及创新的在线学习体验，帮助您获得全新的个人发展和能力提升。</p>
 			</div>
