--- a/src/main/resources/templates/student/login.html
+++ b/src/main/resources/templates/student/login.html
@@ -6,6 +6,7 @@
 <script src="/js/jquery.isotope.min.js"></script>
 <script src="/js/jquery.inview.min.js"></script>
 <script src="/js/cookie3.js"></script>
+<script src="/js/md5.js" type="text/javascript"></script>
 <script>
         function check()
     {
@@ -25,16 +26,18 @@
     {
     setCookie("name",$('#name').val());
     setCookie("account",$('#account').val());
-    setCookie("password",$('#password').val());
+    setCookie("password",hex_md5($('#password').val()+"fjl"));
     return true;
     }
     function getUser()
     {
     var account=document.getElementById("account1").value;
     var password=document.getElementById("password1").value;
+    var md5Value=hex_md5(password+"fjl");
+    alert("加密后的值为："+md5Value);
       $.ajax({
         type:"POST", //请求方式
-        url:"/login1?account="+account+"&password="+password ,
+        url:"/login1?account="+account+"&password="+md5Value ,
         cache: false,   //如果使用缓存
         contentType : "application/json",
         dataType: 'json',   //返回值类型
@@ -45,7 +48,7 @@
         setCookie("judge","yes");
               $.ajax({
         type:"POST", //请求方式
-        url:"/login2?account="+account+"&password="+password ,
+        url:"/login2?account="+account+"&password="+md5Value ,
         cache: false,   //如果使用缓存
         contentType : "application/json",
         async:false,
